objects/OUV_Vehicle_Accessory__c.object
<CustomObject>
    <description>Junction between Vehicle and Accessory</description>
    <label>OUV Vehicle Accessory</label>
    <nameField>
        <displayFormat>VA-{0000000000}</displayFormat>
        <label>OUV Vehicle Accessory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Vehicle Accessories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessory__c</fullName>
        <label>Accessory</label>
        <referenceTo>Accessory__c</referenceTo>
        <relationshipLabel>OUV Vehicles</relationshipLabel>
        <relationshipName>OUV_Vehicle_Accessories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle__c</fullName>
        <label>OUV Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>Accessories</relationshipLabel>
        <relationshipName>OUV_Vehicle_Accessories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>